# insurance-app

./: README.md  pyproject.toml  readme.md  requirements.txt  translation.py
docs/: cli.md  development.md  requirements.md
insurance/: __init__.py  __main__.py  config.py  main.py  models.py  services.py
insurance/repository/: file_system.py  sanitizers.py
insurance/repository/files/: payments.py
insurance/repository/input/: file_system.py
insurance/repository/sanitizers/: __init__.py  date_sanitizer.py  numerals_sanitizer.py  word_sanitizer.py
insurance/repository/sanitizers/csv/: file_sanitizer.py  line_sanitizer.py
insurance/repository/storage/: __init__.py  json.py  memory.py
insurance/ui/: cli.py  gui_flet.py  gui_tkinter.py
tests/: test_batches.py  test_models.py  test_services.py
tests/integration/: test_file_system.py
tests/integration/file_system/: test_file_system.py  test_payments.py
tests/integration/json/: test_customer_json.py  utils.py
tests/integration/memory/: test_agent_memory.py  test_customer_memory.py  test_payment_line_memory.py  test_payment_memory.py  test_policy_memory.py  test_validity_memory.py  utils.py
tests/services/: test_agent.py  test_customer.py  test_payment.py  test_policy.py  test_services.py  test_validity.py
tests/ui/cli/: test_insurance.py
