[tool.poetry]
name = "insurance"
version = "0.0.1"
description = "Insurance application"
authors = ["Josue Alonzo-Chavarria <joshi.alonzo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
